Updated matrix buttons. (added uppercase style and fixed color-contrast for some bg colors)

--- a/src/css/_buttons.scss
+++ b/src/css/_buttons.scss
@@ -156,3 +156,22 @@ button.card-header.accordion-alpha:focus {
     top:-1px;
     font-size:26px !important;
   }
+
+  .btn-matrix {
+    display: inline-block;
+    font-size: 1rem;
+    line-height: 1.5;
+    text-align: center;
+    text-transform: uppercase;
+    vertical-align: middle;
+    background-color: transparent;
+    border-radius: 50px !important;
+    padding-top: .375rem;
+    padding-bottom: .375rem;
+    padding-right: 1.5rem !important;
+    padding-left: 1.5rem !important;
+    font-weight: 500;
+  }
+
+  .btn-matrix.bg-purple-btn, .btn-matrix.bg-red-btn {color: #fff !important;}
+  .btn-matrix.bg-orange-btn, .btn-matrix.bg-yellow-btn {color: #000 !important;}
